<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/player2_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/player3_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/player_3"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/player4_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/player_4"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/player5_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/player_5"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
</LinearLayout>