<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:stretchColumns="*"
    android:shrinkColumns="*"
    android:gravity="center">
    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_margin="1dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_margin="1dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"
            android:inputType="textPersonName"
            />
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/score1_TV_sam4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/score"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/green"
            />

        <TextView
            android:id="@+id/score2_TV_sam4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/score"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/green"
            />

        <TextView
            android:id="@+id/score3_TV_sam4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/score"
            android:layout_margin="1dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"
            android:textColor="@color/green"
            />

        <TextView
            android:id="@+id/score4_TV_sam4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/score"
            android:layout_margin="1dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"
            android:textColor="@color/green"
            />
    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        >

        <EditText
            android:id="@+id/point1_ET_sam4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/point2_ET_sam4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/point3_ET_sam4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:layout_margin="1dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/point4_ET_sam4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:layout_margin="1dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"
            android:inputType="number"
            />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="1"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win1_btn_sam4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:text="@string/win_btn"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/button_background"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win2_btn_sam4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/win_btn"
            android:layout_margin="5dp"
            android:layout_column="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win3_btn_sam4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/win_btn"
            android:layout_margin="5dp"
            android:layout_column="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/win4_btn_sam4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/win_btn"
            android:layout_margin="5dp"
            android:layout_column="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            />
    </TableRow>

    <Button
        android:id="@+id/back_btn_sam4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/back"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/tutorial"
        android:textSize="36dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tutorial_sam4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/tutorial_info"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

</TableLayout>